--- a/Configuration.ini
+++ b/Configuration.ini
@@ -1,4 +1,11 @@
 [StartLoad]
-WaitCarComeTime = 120
+WaitCarComeTime = 60
 WaitCarLeaveTime = 180
 AfterCarLeaveTime = 5
+
+192.168.0.56 = 11000002
+
+11000002 = '192.168.0.56'
+
+ScanMaxLock = 0x11000020
+StartCount = 0x11000000
