--- a/logging.config
+++ b/logging.config
@@ -1,8 +1,8 @@
 [loggers]
-keys=root, ws_in_log, ws_out_log,ws_in_log2
+keys=root, ws_in_log, ws_out_log,ws_in_log2,ws_cam_log
 
 [handlers]
-keys=consoleHandler, ws_in_hand, ws_out_hand,ws_in_hand2
+keys=consoleHandler, ws_in_hand, ws_out_hand,ws_in_hand2,ws_cam_hand
 
 [formatters]
 keys=generic_form
@@ -26,6 +26,12 @@ level=ERROR
 handlers=ws_out_hand
 qualname=ws_error_log
 
+[logger_ws_cam_log]
+level=DEBUG
+handlers=ws_cam_hand
+qualname=ws_cam_log
+
+
 [handler_ws_in_hand]
 class=logging.handlers.TimedRotatingFileHandler
 level=NOTSET
@@ -43,6 +49,12 @@ class=logging.handlers.TimedRotatingFileHandler
 level=NOTSET
 formatter=generic_form
 args=('Log/ErrorFront.log', 'D', 1, 14)
+
+[handler_ws_cam_hand]
+class=logging.handlers.TimedRotatingFileHandler
+level=NOTSET
+formatter=generic_form
+args=('Log/CamLog.log', 'H', 2, 84 )
 
 [handler_consoleHandler]
 class=StreamHandler
